--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.2",
     "react-intersection-observer": "^9.4.0",
+    "react-use-scroll-snap": "0.0.4",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^2.0.3",
     "tailwindcss": "^3.0.9",
